fixes image path

--- a/ERU324/newspaper/pages/felipe.html
+++ b/ERU324/newspaper/pages/felipe.html
@@ -8,7 +8,7 @@
     </p>
 
     <figure class="figure">
-        <img class="media fullmedia" src="/public/hacker.gif" alt="">
+        <img class="media fullmedia" src="public/hacker.gif" alt="">
         <figcaption class="figcaption">Hacker Meme. 2015. Disponível
             em:
             <a href="https://imgur.com/gallery/hDOfuOx" target="_blank">https://imgur.com/gallery/hDOfuOx</a>.
