--- a/ERU324/newspaper/pages/samuel.html
+++ b/ERU324/newspaper/pages/samuel.html
@@ -9,7 +9,7 @@
     </p>
 
     <figure class="figure first-image" style="margin-right: 1rem;">
-        <img class="media fullmedia" src="/public/bulimia.jpg" alt="">
+        <img class="media fullmedia" src="public/bulimia.jpg" alt="">
         <figcaption class="figcaption">The Bulimia Project. 2023. Disponível
             em:
             <a href="https://bulimia.com/examine/scrolling-into-bias/"
