--- a/ERU324/newspaper/pages/julio.html
+++ b/ERU324/newspaper/pages/julio.html
@@ -1,33 +1,41 @@
 <div>
     <p>
-        Na era da revolução digital, a ciência e a tecnologia avançam a passos largos, moldando não apenas a maneira
-        como vivemos, mas também redefinindo os limites do que é possível. Entre as inovações mais notáveis estão a
-        inteligência artificial (IA) e os carros autônomos, que prometem revolucionar setores inteiros, desde o
-        transporte até a assistência médica. No entanto, por trás das promessas de um futuro brilhante, é crucial
+        Na era atual, a ciência e a tecnologia avançam a passos largos, moldando não apenas a maneira
+        como vivemos, mas também redefinindo os limites do que é possível. Entre as inovações mais notáveis, podemos
+        citar o
+        surgimento da inteligência artificial (IA) generativo, os carros autônomos, drones e principalmente as redes
+        sociais, com sua capacidade de alcance e disseminação acelerada de informação. Esssas novas tecnologias prometem
+        revolucionar setores inteiros, desde o transporte até a assistência médica, passando pela comunicação,
+        entretenimento, entre outros. No entanto, por trás das promessas de um futuro brilhante, é crucial
         examinar de perto as estratégias de marketing empregadas por empresas e instituições que buscam investimentos,
-        muitas vezes recorrendo ao pânico e à exagerada promessa de mudanças drásticas.
+        muitas vezes recorrendo ao pânico e à exagerada promessa de mudanças drásticas para atrair a atenção do público
+        e
+        dos investidores.
     </p>
 
     <p>
         A primeira estratégia comum é a exploração do medo do desconhecido. Diante de avanços rápidos e disruptivos, é
         compreensível que surjam preocupações sobre o impacto dessas tecnologias em nossas vidas. Empresas e
-        pesquisadores frequentemente capitalizam sobre esse medo, retratando a IA como uma ameaça iminente à humanidade
-        ou os carros autônomos como potenciais assassinos nas estradas. Embora seja vital abordar os riscos e desafios
+        pesquisadores frequentemente capitalizam sobre esse medo, retratando a IA como uma ameaça iminente às relações
+        humanas, principalmente na era da pós-verdade, ou os carros autônomos como potencial forma de dispensar a tarefa
+        humana de dirigir, ou drones, que poderão acabar com as lojas. Embora seja vital abordar os riscos e desafios
         éticos associados a essas tecnologias, o exagero do perigo pode distorcer a percepção pública e dificultar
         discussões equilibradas sobre o assunto.
     </p>
 
 
     <p>
-        Além disso, há uma tendência crescente de superestimar os benefícios e impactos transformadores dessas
-        inovações. Muitas empresas recorrem a uma retórica exagerada, prometendo uma revolução total em setores inteiros
-        da sociedade. Embora a IA e os carros autônomos tenham o potencial de trazer avanços significativos, é
-        importante reconhecer que a implementação dessas tecnologias enfrenta uma série de desafios técnicos, éticos e
+        Há uma tendência crescente de superestimar os benefícios e impactos transformadores dessas
+        inovações, além de pouco se discutir as dificuldades e custos de suas implementações. Muitas empresas recorrem a
+        uma retórica exagerada, prometendo uma revolução total em setores inteiros
+        da sociedade. Embora essas tecnologias tenham o potencial de trazer avanços significativos, é
+        importante reconhecer que a sua implementação enfrenta uma série de desafios técnicos, financeiros,
+        operacionais, éticos e
         sociais. A superestimação das capacidades dessas tecnologias pode levar a expectativas irrealistas e decepção
         quando os resultados não correspondem às promessas.
         <span class="citation">
             "Não faltam tecnologias recentes que perigam mudar completamente o mundo, ou será? Todas essas tecnologias
-            tem algo e comum, mas não é o fim da humanidade, e sim o hype criado em cima de <b>MEDO</b> que
+            tem algo em comum, mas não é o fim da humanidade, e sim o hype criado em cima de <b>MEDO</b> que
             paradoxalmente traz muito dinheiro e muita busca para as empresas que desenvolvem algo que pode nem ser
             viável no fim das contas."
             <figcaption class="figcaption">Tecnologias que podem acabar com o mundo. <b>Atila Iamarino.</b> 2023.
@@ -52,17 +60,17 @@
 
     <p>
         É fundamental reconhecer que a ciência e a tecnologia não existem em um vácuo ético. O progresso deve ser
-        acompanhado por uma reflexão cuidadosa sobre as implicações éticas, sociais e políticas de nossas inovações. Em
+        acompanhado por uma reflexão cuidadosa sobre as implicações sociais e políticas dessas inovações. Em
         vez de recorrer ao pânico e às promessas exageradas, as empresas e os pesquisadores devem adotar uma abordagem
         mais equilibrada e responsável, comprometendo-se com a transparência, o diálogo aberto e a consideração
-        cuidadosa das preocupações éticas e sociais.
+        cuidadosa das preocupações com o impacto do que está sendo desenvolvido.
     </p>
 
     <p>
         À medida que nos aventuramos em um futuro impulsionado pela IA e pela automação, é crucial lembrar que o
-        progresso tecnológico só é verdadeiramente benéfico quando é acompanhado por uma sólida base ética. Em vez de
+        progresso tecnológico só é verdadeiramente benéfico quando é acompanhado por uma sólida base moral. Em vez de
         ceder ao sensacionalismo e à exagerada promessa de mudanças radicais, devemos nos comprometer com uma abordagem
-        ética que coloque o bem-estar humano no centro de nossas inovações tecnológicas. Afinal, a verdadeira revolução
+        que coloque o bem-estar da vida no centro de nossas inovações tecnológicas. Afinal, a verdadeira revolução
         não está apenas nas máquinas que construímos, mas na forma como escolhemos usá-las para moldar um futuro mais
         justo, inclusivo e sustentável para todos.
     </p>
