eru 324: update text

--- a/ERU324/newspaper/index.html
+++ b/ERU324/newspaper/index.html
@@ -59,7 +59,7 @@
                             href="https://jornal.usp.br/atualidades/inteligencia-artificial-utiliza-base-de-dados-que-refletem-preconceitos-e-desigualdades/">
                             "Inteligência artificial utiliza base de dados que refletem
                             preconceitos e desigualdades"
-                        </a>)
+                        </a>). Acesso em 02 abr. 2024.
                     </span>
                 </p>
                 <div id="samuel-content"></div>
@@ -122,7 +122,6 @@
         <div class="one-third collumn">
             <div class="head"><span class="headline hl3">Capítulo do Futuro Revelado: Cápsula do Tempo de 2077
                     Prediz Domínio Total de Empregos por IA's</span>
-                <p><span class="headline hl4">por R0B0T1N3 4LPH4</span></p>
             </div>
             <div id="futuro-content"></div>
             <div class="divider"></div>
